# ai-tarot

./: .dockerignore  docker-compose.yml  pyproject.toml
scripts/: cleanup_old_sessions.py  (+6 more)
src/ai-tarot-reader-backend/: .gitignore  Dockerfile  README.md  config.yml  prompts.yaml  pyproject.toml
src/ai-tarot-reader-backend/ai_tarot_reader_backend/: app.py
src/ai-tarot-reader-backend/ai_tarot_reader_backend/api/: dependencies.py
src/ai-tarot-reader-backend/ai_tarot_reader_backend/api/routes/: cards.py  sessions.py  streaming.py  user.py
src/ai-tarot-reader-backend/ai_tarot_reader_backend/api/schemas/: sessions.py  streaming.py  user.py
src/ai-tarot-reader-backend/ai_tarot_reader_backend/configs/: __init__.py  config.py
src/ai-tarot-reader-backend/ai_tarot_reader_backend/core/: database.py  errors.py  transactions.py
src/ai-tarot-reader-backend/ai_tarot_reader_backend/db/: __init__.py  orm.py
src/ai-tarot-reader-backend/ai_tarot_reader_backend/entities/: domain.py  enums.py
src/ai-tarot-reader-backend/ai_tarot_reader_backend/services/: card_service.py  llm.py  ml_client.py  notifications.py  prediction_service.py  predictions.py  prompts.py  session_service.py  streaming.py  streaming_service.py  user_service.py
src/ai-tatrot-reader-ml-layer/: .gitignore  Dockerfile  README.md  pyproject.toml
src/ai-tatrot-reader-ml-layer/ai_tatrot_reader_ml_layer/: app.py
src/ai-tatrot-reader-ml-layer/ai_tatrot_reader_ml_layer/entities/: enums.py
src/ai-tatrot-reader-ml-layer/ai_tatrot_reader_ml_layer/services/: classifier_service.py  safety_router_service.py
(+15 files in other folders)
