[project]
name = "ai-tatrot-reader-ml-layer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.10",
    "numpy>=2.4.4",
    "pymorphy3>=2.0.6",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "transformers>=5.8.0",
]
